--- a/Article.html
+++ b/Article.html
@@ -81,11 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 <i>M</i><sub>L</sub> 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <b>44</b>(2):9. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a>
+                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 <i>M</i><small>L</small> 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <b>44</b>(2):9. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Cho, E., Woo, J.-U., Rhie, J., Kang, T.-S., Baag, S.-Y. (2023). Rupture process of the 2017 <i>M</i><sub>w</sub> 5.5 Pohang, South Korea, earthquake via an empirical Green's function method. <i>Bulletin of the Seismological Society of America</i>, <b>113</b>(2), 592-603. <a href="https://doi.org/10.1785/0120220161" target="_blank">doi:10.1785/0120220161</a>
+                                            <li class="publication">Cho, E., Woo, J.-U., Rhie, J., Kang, T.-S., Baag, S.-Y. (2023). Rupture process of the 2017 <i>M</i><small>w</small> 5.5 Pohang, South Korea, earthquake via an empirical Green's function method. <i>Bulletin of the Seismological Society of America</i>, <b>113</b>(2), 592-603. <a href="https://doi.org/10.1785/0120220161" target="_blank">doi:10.1785/0120220161</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -97,11 +97,11 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Lim, H., Kim, Y., Kwon, K.B., Han, J., Ahn, B.S., Chai, G., Choi, Y., Heo, D., Jung, Y., Kang, H., Koh, M.H., Kwon, J., Park, J.Y., Seo, M.-S., Son, Y.O., Han, S., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Deployment of the linear array with geophones on the fault zone of the 2016 Mw 5.5 Gyeongju earthquake. <i>Journal of the Geological Society of Korea</i>, <b>57</b>(5), 741-746. <a href="https://doi.org/10.14770/jgsk.2021.57.5.741" target="_blank">doi:10.14770/jgsk.2021.57.5.741</a>
+                                            <li class="publication">Lim, H., Kim, Y., Kwon, K.B., Han, J., Ahn, B.S., Chai, G., Choi, Y., Heo, D., Jung, Y., Kang, H., Koh, M.H., Kwon, J., Park, J.Y., Seo, M.-S., Son, Y.O., Han, S., Kang, T.-S., Rhie, J., Kim, K.-H., Ree, J.-H. (2021). Deployment of the linear array with geophones on the fault zone of the 2016 <i>M</i><small>w</small> 5.5 Gyeongju earthquake. <i>Journal of the Geological Society of Korea</i>, <b>57</b>(5), 741-746. <a href="https://doi.org/10.14770/jgsk.2021.57.5.741" target="_blank">doi:10.14770/jgsk.2021.57.5.741</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kang, H., Kim, Y., Rhie, J., Kang, T.-S., Brenna, M. (2021). Seismic crustal structure beneath Jeju Volcanic Island, South Korea from teleseismic P-receiver functions. <i>Geophysical Journal International</i>, <b>227</b>(1), 58-75. <a href="https://doi.org/10.1093/gji/ggab211" target="_blank">doi:10.1093/gji/ggab211</a>
+                                            <li class="publication">Kang, H., Kim, Y., Rhie, J., Kang, T.-S., Brenna, M. (2021). Seismic crustal structure beneath Jeju Volcanic Island, South Korea from teleseismic <i>P</i>-receiver functions. <i>Geophysical Journal International</i>, <b>227</b>(1), 58-75. <a href="https://doi.org/10.1093/gji/ggab211" target="_blank">doi:10.1093/gji/ggab211</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -117,7 +117,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Woo, J.-U., Kim, M., Rhie, J., Kang, T.-S. (2020). Aftershock sequence and statistics of the 2017 Mw 5.5 Pohang, South Korea, earthquake: implications of fault heterogeneity and post seismic relaxation. <i>Bulletin of the Seismological Society of America</i>, <b>110</b>(5), 2031-2046. <a href="https://doi.org/10.1785/0120200059" target="_blank">doi:10.1785/0120200059</a>
+                                            <li class="publication">Woo, J.-U., Kim, M., Rhie, J., Kang, T.-S. (2020). Aftershock sequence and statistics of the 2017 <i>M</i><small>w</small> 5.5 Pohang, South Korea, earthquake: implications of fault heterogeneity and post seismic relaxation. <i>Bulletin of the Seismological Society of America</i>, <b>110</b>(5), 2031-2046. <a href="https://doi.org/10.1785/0120200059" target="_blank">doi:10.1785/0120200059</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -125,11 +125,11 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Woo, J.-U., Kim, M., Sheen, D.-H., Kang, T.-S., Rhie, J., Grigoli, F., Ellsworth, W., Giardini, D. (2019). An in-depth seismological analysis revealing a causal link between the 2017 Mw 5.5 Pohang earthquake and EGS project. <i>Journal of Geophysical Research: Solid Earth</i>, <b>124</b>(12), 13060-13078. <a href="https://doi.org/10.1029/2019JB018368" target="_blank">doi:10.1029/2019JB018368</a>
+                                            <li class="publication">Woo, J.-U., Kim, M., Sheen, D.-H., Kang, T.-S., Rhie, J., Grigoli, F., Ellsworth, W., Giardini, D. (2019). An in-depth seismological analysis revealing a causal link between the 2017 <i>M</i><small>w</small> 5.5 Pohang earthquake and EGS project. <i>Journal of Geophysical Research: Solid Earth</i>, <b>124</b>(12), 13060-13078. <a href="https://doi.org/10.1029/2019JB018368" target="_blank">doi:10.1029/2019JB018368</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Baag, S.-Y., Rhie, J., Yoo, S.-H., Kim, S., Kim, S., Kang, T.-S. (2019). Determination of megathrust rupture processes using plate-interface-based fault models and 3D Green’s functions: An application to the 2011 Mw 9.1 Tohoku earthquake. <i>Pure and Applied Geophysics</i>, <b>176</b>(12), 5235-5252. <a href="https://doi.org/10.1007/s00024-019-02272-7" target="_blank">doi:10.1007/s00024-019-02272-7</a>
+                                            <li class="publication">Baag, S.-Y., Rhie, J., Yoo, S.-H., Kim, S., Kim, S., Kang, T.-S. (2019). Determination of megathrust rupture processes using plate-interface-based fault models and 3D Green’s functions: An application to the 2011 <i>M</i><small>w</small> 9.1 Tohoku earthquake. <i>Pure and Applied Geophysics</i>, <b>176</b>(12), 5235-5252. <a href="https://doi.org/10.1007/s00024-019-02272-7" target="_blank">doi:10.1007/s00024-019-02272-7</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -153,7 +153,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Witek, M., van der Lee, S., Kang, T.-S., Chang, S.-J., Ning, J., Ning, S. (2018). S velocity model of East Asia from a cluster analysis of localized dispersion. <i>Journal of Geophysical Research: Solid Earth</i>, <b>123</b>(11), 9712-9732. <a href="https://doi.org/10.1029/2018JB016060" target="_blank">doi:10.1029/2018JB016060</a>
+                                            <li class="publication">Witek, M., van der Lee, S., Kang, T.-S., Chang, S.-J., Ning, J., Ning, S. (2018). <i>S</i> velocity model of East Asia from a cluster analysis of localized dispersion. <i>Journal of Geophysical Research: Solid Earth</i>, <b>123</b>(11), 9712-9732. <a href="https://doi.org/10.1029/2018JB016060" target="_blank">doi:10.1029/2018JB016060</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -193,7 +193,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kim, K.-H., Kim, J., Han, M., Kang, S. Y., Son, M., Kang, T.-S., Rhie, J., Kim, Y., Park, Y., Kim, H.-J., You, Q., Hao, T. (2017). Deep fault plane revealed by high-precision locations of early aftershocks following the 12 September 2016 M<sub>L</sub> 5.8 Gyeongju, Korea, earthquake. <i>Bulletin of the Seismological Society of America</i>, <b>108</b>(1), 517-523. <a href="https://doi.org/10.1785/0120170104" target="_blank">doi:10.1785/0120170104</a>
+                                            <li class="publication">Kim, K.-H., Kim, J., Han, M., Kang, S. Y., Son, M., Kang, T.-S., Rhie, J., Kim, Y., Park, Y., Kim, H.-J., You, Q., Hao, T. (2017). Deep fault plane revealed by high-precision locations of early aftershocks following the 12 September 2016 <i>M</i><small>L</small> 5.8 Gyeongju, Korea, earthquake. <i>Bulletin of the Seismological Society of America</i>, <b>108</b>(1), 517-523. <a href="https://doi.org/10.1785/0120170104" target="_blank">doi:10.1785/0120170104</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -253,7 +253,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kim, S., Nyblade, A. A., Rhie, J., Baag, C.-E., Kang, T.-S. (2012). Crustal S-wave velocity structure of the Main Ethiopian Rift from ambient noise tomography. <i>Geophysical Journal International</i>, <b>191</b>(2), 865-878. <a href="https://doi.org/10.1111/j.1365-246X.2012.05664.x" target="_blank">doi:10.1111/j.1365-246X.2012.05664.x</a>
+                                            <li class="publication">Kim, S., Nyblade, A. A., Rhie, J., Baag, C.-E., Kang, T.-S. (2012). Crustal <i>S</i>-wave velocity structure of the Main Ethiopian Rift from ambient noise tomography. <i>Geophysical Journal International</i>, <b>191</b>(2), 865-878. <a href="https://doi.org/10.1111/j.1365-246X.2012.05664.x" target="_blank">doi:10.1111/j.1365-246X.2012.05664.x</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -301,7 +301,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Hong, T.-K., Kang, T.-S. (2009). Pn travel-time tomography of the paleo-continental-collision and rifting zone around Korea and Japan. <i>Bulletin of the Seismological Society of America</i>, <b>99</b>(1), 416-421. <a href="https://doi.org/10.1785/0120080120" target="_blank">doi:10.1785/0120080120</a>
+                                            <li class="publication">Hong, T.-K., Kang, T.-S. (2009). <i>P</i><small>n</small> travel-time tomography of the paleo-continental-collision and rifting zone around Korea and Japan. <i>Bulletin of the Seismological Society of America</i>, <b>99</b>(1), 416-421. <a href="https://doi.org/10.1785/0120080120" target="_blank">doi:10.1785/0120080120</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -345,7 +345,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Kang, T.-S., Baag, C.-E. (2004), The 29 May 2004, M<sub>w</sub>=5.1, offshore Uljin earthquake, Korea. <i>Geosciences Journal</i>, <b>8</b>(2), 115-123. <a href="https://doi.org/10.1007/BF02910189" target="_blank">doi:10.1007/BF02910189</a>
+                                            <li class="publication">Kang, T.-S., Baag, C.-E. (2004), The 29 May 2004, <i>M</i><small>w</small>=5.1, offshore Uljin earthquake, Korea. <i>Geosciences Journal</i>, <b>8</b>(2), 115-123. <a href="https://doi.org/10.1007/BF02910189" target="_blank">doi:10.1007/BF02910189</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
@@ -353,7 +353,7 @@
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Mohamed, H. H., Kang, T.-S., Baag, C.-E. (2001). Focal mechanism determination based on the polarity and SV-P amplitude ratio in the Kalabsha area, Aswan, Egypt. <i>Geosciences Journal</i>, <b>5</b>(2), 165-171. <a href="https://doi.org/10.1007/BF02910422" target="_blank">doi:10.1007/BF02910422</a>
+                                            <li class="publication">Mohamed, H. H., Kang, T.-S., Baag, C.-E. (2001). Focal mechanism determination based on the polarity and <i>SV-P</i> amplitude ratio in the Kalabsha area, Aswan, Egypt. <i>Geosciences Journal</i>, <b>5</b>(2), 165-171. <a href="https://doi.org/10.1007/BF02910422" target="_blank">doi:10.1007/BF02910422</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
