--- a/Conference.html
+++ b/Conference.html
@@ -82,6 +82,18 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="publication">
+                                                Xiangyi An, Jin-Han Ree, Sungshil Kim, Dabin Heo, Kyungjoon Cho, Tae-Seob Kang, Kwang-Hee Kim, YoungHee Kim, Junkee Rhie (2022). Rupture propagation and arrest during 2016 Gyeongju earthquake sequence. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
+                                            </li>
+                                            <li class="publication">
+                                                안병석, 강태섭, 유현재 (2022). HVSR을 이용한 부지증폭함수 추정 및 지진동 부지증폭 보정. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
+                                            </li>
+                                            <li class="publication">
+                                                박수희, 허다빈, 강태섭, 이준기, 김성룡, Jan Dettmer (2022). 캐나다 Kiskatinaw 지역 미소지진 활동 특성 연구. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
+                                            </li>
+                                            <li class="publication">
+                                                신연주, 이상준, 김성룡, 이준기, 강태섭, 김령이 (2022). 울릉도 최상부 지각에 대한 배경 잡음 토모그래피. 2022 추계지질과학연합학술대회, 창원컨벤션센터(CECO), 2022.10.25.-28.
+                                            </li>
+                                            <li class="publication">
                                                 Kang, T.-S. (2020). Integrated monitoring system of the Pohang EGS site. <i>2020 International Forum on Pohang Earthquake: Advancing Understanding through Study of the Pohang Earthquake</i>, POSCO International Center (offline) and <a href="http://www.pohangeq.or.kr/2020/" target="_blank">online</a>, November 11-14, 2020.
                                             </li>
                                             <li class="publication">
