--- a/Article.html
+++ b/Article.html
@@ -81,7 +81,11 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 <i>M</i><small>L</small> 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>. <b>44</b>(2):9. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a>
+                                            <li class="publication">Lee, S., Song, J.-H., Heo, D., Rhie, J., Kang, T.-S., Choi, E., Kim, Y., Kim, K.-H., Ree, J.-H. (2023). Crustal and uppermost mantle structures imaged by teleseismic P-wave travel-time tomography beneath the southeastern Korean Peninsula: Implications for a hydrothermal system controlled by the thermally modified lithosphere. <i>Geophysical Journal International</i>. (accepted) 
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
+                                            <li class="publication">Park, H., Kang, T.-S., Yoo, H.J., Heo, D. (2023). Microearthquake activity associated with the 2016 <i>M</i><small>L</small> 5.0 offshore Ulsan earthquake sequence and its tectonic implications. <i>Marine Geophysical Research</i>, <b>44</b>(2):9. <a href="https://doi.org/10.1007/s11001-023-09515-2" target="_blank">doi:10.1007/s11001-023-09515-2</a>
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
