--- a/Research.html
+++ b/Research.html
@@ -54,6 +54,7 @@
                                             <li><a href="#">Earthquake source parameters</a></li>
                                             <li><a href="#">Strong ground motions</a></li>
                                             <li><a href="#">Seismic hazard</a></li>
+                                            <li><a href="SeismicNetwork.html">Seismic network</a></li>
                                         </ul>
                                     </section>
                                     <section>
