--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publication of geophysics@pknu</title>
+		<title>Research of geophysics@pknu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -78,12 +78,12 @@
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Report</h2>
-											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
+											<h2>Seismic Network</h2>
+											<h3>that <span style="color: #004d65;">geophysics@pknu</span> explores and uses</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">
-                                                TBA ...
+                                            <li class="Research Fields">
+                                                Compilation of stations metadata within regional seismic networks in the southern Korean Peninsula: SAC polezero and XML files
                                             </li>
                                         </ul>
 									</section>
