--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -83,8 +83,9 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="Research Fields">
-                                                Compilation of stations metadata within regional seismic networks in the southern Korean Peninsula: <a href="KS_KG_metadata_202308.SACPZ" target="_blank">SAC polezero</a> and <a href="KS_KG_metadata_202308.xml" target="_blank">XML</a> files
-						     
+                                                Compilation of stations metadata within regional seismic networks in the southern Korean Peninsula<br>
+						- <a href="KS_KG_metadata_202308.SACPZ" target="_blank">SAC polezero</a> file<br>
+						- <a href="KS_KG_metadata_202308.xml" target="_blank">XML</a> file
                                             </li>
                                         </ul>
 									</section>
