--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -84,8 +84,10 @@
                                         <ul class="link-list last-child">
                                             <li class="Research Fields">
                                                 Compilation of stations metadata within regional seismic networks in the southern Korean Peninsula<br>
-						- <a href="KS_KG_metadata_202308.SACPZ" target="_blank">SAC polezero</a> file<br>
-						- <a href="KS_KG_metadata_202308.xml" target="_blank">XML</a> file
+						- <a href="KS_KG_metadata_202308.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file<br>
+						- <a href="KS_KG_metadata_202308.xml" target="_blank">Extensible Markup Language (XML)</a> file<be>
+						(created in 5 Nov. 2023; updated in 6 Nov. 2023)<br><br>
+						[Reference]안병석, 강태섭, 정진오 (2023). 한반도 남부 광역 지진관측망 메타데이터 정리, 2023 추계지질과학연합학술대회, 2023.11.07.–10., 부산 벡스코.
                                             </li>
                                         </ul>
 									</section>
