--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -87,7 +87,7 @@
 						- <a href="KS_KG_metadata_202308.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file<br>
 						- <a href="KS_KG_metadata_202308.xml" target="_blank">Extensible Markup Language (XML)</a> file<br>
 						(created on 5 November 2023; updated on 6 November 2023)<br><br>
-						[Reference]<br>
+						[Reference]
 						<li class="publication">안병석, 강태섭, 정진오 (2023). 한반도 남부 광역 지진관측망 메타데이터 정리, 2023 추계지질과학연합학술대회, 2023.11.07.–10., 부산 벡스코.</li>
                                             </li>
                                         </ul>
