--- a/People.html
+++ b/People.html
@@ -166,50 +166,24 @@
                                     <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
                                         <ul class="people-list">
                                             <li>
+                                                <img src="./images/people/junebaek.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">M.S.</q></p>
+                                                <p>Ph.D. Student</p>
+                                                <p>100june6(at)gmail.com<br>
+                                                Crustal anisotropy and stress fields</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
                                                 <img src="./images/people/donghyeopseol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Seol, DongHyeop&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                                 <p>M.S. Student</p>
                                                 <p>donghyeop0619(at)gmail.com<br>
                                                 Rupture directivity</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
-                                                <p>gibackk96(at)gmail.com<br>
-                                                Shallow subsurface structure and site effects</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/choiyujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
-                                                <p>yjchoi2126(at)gmail.com<br>
-                                                Seismicity in the eastern offshore of the Korean Peninsula</p>
-                                            </li>
-                                        </ul>
-                                    </section>
-                            </div>
-                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
-                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
-                                        <ul class="people-list">
-                                            <li>
-                                                <img src="./images/people/junebaek.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Baek, June&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
-                                                <p>M.S. Student</p>
-                                                <p>100june6(at)gmail.com<br>
-                                                Crustal anisotropy and stress fields</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -246,9 +220,9 @@
                                             <li>
                                                 <img src="./images/people/LeeHanByeol.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Lee, Han Byeol&nbsp&nbsp</p>
-                                                <p>B.S. Student</p>
+                                                <p>M.S. Student; currently Research Trainee at KIGAM</p>
                                                 <p>15lhstar@gmail.com<br>
-                                                Earthquake analysis</p>
+                                                Seismo-acoustic analysis</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -499,7 +473,6 @@
                                             <li>
                                                 <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
                                                 <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp</p>
-                                                <p>B.S. Student</p>
                                             </li>
                                         </ul>
                                     </section>
@@ -516,9 +489,31 @@
                                         </ul>
                                     </section>
                             </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/choiyujeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Choi, Yujeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
+                            <div class="col-6 col-12-medium" style="margin: -20px 0 0px 0;">
+                                    <section style="padding: 20px 10px 20px 30px; margin: 0 0 25px 0;">
+                                        <ul class="people-list">
+                                            <li>
+                                                <img src="./images/people/gibackkwon.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
+                                                <p style="line-height:2em; font-size:1.1em">Kwon, Ki Baek&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
+                                                <p>Researcher</p>
+                                                <p>Korea Institute of Ocean Science and Technology (KIOST)</p>
+                                            </li>
+                                        </ul>
+                                    </section>
+                            </div>
                         </div>
-					</div>
-				</section>
+		    </div>
+		</section>
 
                 <!-- Footer -->
                     <section id="footer">
