--- a/People.html
+++ b/People.html
@@ -472,7 +472,7 @@
                                         <ul class="people-list">
                                             <li>
                                                 <img src="./images/people/gohyejeong.png" alt=""  width="100px" style="background-color:#EAFAF1"/>
-                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp</p>
+                                                <p style="line-height:2em; font-size:1.1em">Go, Hyejeong&nbsp&nbsp<q style="font-size:12px">B.S.</q></p>
                                             </li>
                                         </ul>
                                     </section>
