--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -83,11 +83,11 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="Research Fields">
-                                                한반도 남부 광역 지진관측망 메타데이터 정리 - 작성: 2023.11.05.; 갱신: 2023.11.06.<br>
-						- <a href="KS_KG_metadata_202308.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file<br>
-						- <a href="KS_KG_metadata_202308.xml" target="_blank">Extensible Markup Language (XML)</a> file<br><br>
+                                                한반도 남부 광역 지진관측망 메타데이터 - 작성: 2023.11.05.; 갱신: 2023.11.22.<br>
+						- <a href="KS_KG_metadata_v1.0.0.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file<br>
+						- <a href="KS_KG_metadata_v1.0.0.xml" target="_blank">Extensible Markup Language (XML)</a> file<br><br>
 						[Reference]
-						<li class="publication">안병석, 강태섭, 정진오 (2023). 한반도 남부 광역 지진관측망 메타데이터 정리, 2023 추계지질과학연합학술대회, 2023.11.07.–10., 부산 벡스코.</li>
+						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2023). Station metadata integration of regional seismic networks in the southern Korean Peninsula. Journal of the Geological Society of Korea (submitted).</li>
                                             </li>
                                         </ul>
 									</section>
