--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -84,8 +84,8 @@
                                         <ul class="link-list last-child">
                                             <li class="Research Fields">
                                                 한반도 남부 광역 지진관측망 메타데이터 - 작성: 2023.11.05.; 갱신: 2023.11.22.<br>
-						- <a href="KS_KG_metadata_v1.0.0.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file<br>
-						- <a href="KS_KG_metadata_v1.0.0.xml" target="_blank">Extensible Markup Language (XML)</a> file<br><br>
+						- <a href="KS_KG_metadata_v1.0.0.SACPZ" target="_blank">Seismic Analysis Code (SAC) polezero</a> file (6.8 MB)<br>
+						- <a href="KS_KG_metadata_v1.0.0.xml" target="_blank">Extensible Markup Language (XML)</a> file (147.7 MB)<br><br>
 						[Reference]
 						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2023). Station metadata integration of regional seismic networks in the southern Korean Peninsula. Journal of the Geological Society of Korea (submitted).</li>
                                             </li>
