--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press)  
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Lee, S., Song, J.-H., Heo, D., Rhie, J., Kang, T.-S., Choi, E., Kim, Y., Kim, K.-H., Ree, J.-H. (2023). Crustal and uppermost mantle structures imaged by teleseismic P-wave travel-time tomography beneath the southeastern Korean Peninsula: Implications for a hydrothermal system controlled by the thermally modified lithosphere. <i>Geophysical Journal International</i>, <b>235</b>(2), 1639-1657. <a href="https://doi.org/10.1093/gji/ggad319" target="_blank">doi:10.1093/gji/ggad319</a> 
                                             </li>
                                         </ul>
