--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -87,7 +87,7 @@
 						- <a href="KS_KG_metadata_v1.0.0.SACPZ.zip" target="_blank">Station metadata in SACPZ format</a> for the Seismic Analysis Code (SAC) environment (file size: 6.8 MB)<br>
 						- <a href="KS_KG_metadata_v1.0.0.xml.zip" target="_blank">Station metadata in XML format</a> for the ObsPy platform (file size: 147.7 MB)<br><br>
 						[Reference] - Please cite the article below if you feel this would be useful! Though it is currently under review, I hope it can be accepted and published soon so that I can update the citation, including an appropriate DOI information.
-						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2023). Station metadata integration of regional seismic networks in the southern Korean Peninsula. Journal of the Geological Society of Korea (in Korean with English abstract; currently under review).</li>
+						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press).</li>
                                             </li>
                                         </ul>
 									</section>
