--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -86,7 +86,7 @@
                                                 한반도 남부 광역 지진관측망 메타데이터 - 작성: 2023.11.05.; 갱신: 2023.11.22.<br>
 						- <a href="KS_KG_metadata_v1.0.0.SACPZ.zip" target="_blank">Station metadata in SACPZ format</a> for the Seismic Analysis Code (SAC) environment (file size: 6.8 MB)<br>
 						- <a href="KS_KG_metadata_v1.0.0.xml.zip" target="_blank">Station metadata in XML format</a> for the ObsPy platform (file size: 147.7 MB)<br><br>
-						[Reference] - Please cite the article below if you feel this would be useful! Though it is currently under review, I hope it can be accepted and published soon so that I can update the citation, including an appropriate DOI information.
+						[Reference] - Please cite the article below if you feel this would be useful! It is currently accepted for publication in Journal of the Geological Society of Korea. You will be able to check out the paper online during March.
 						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press).</li>
                                             </li>
                                         </ul>
