--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -83,7 +83,7 @@
 										</header>
                                         <ul class="link-list last-child">
                                             <li class="Research Fields">
-                                                한반도 남부 광역 지진관측망 메타데이터 - 작성: 2023.11.05.; 갱신: 2023.11.22.<br>
+                                                한반도 남부 광역 지진관측망 메타데이터 - 작성: 2023.11.05.; 갱신: 2023.11.22.<br><br>
 
 						한반도 남부 지역에서 운영되고 있는 광역 지진관측망의 관측소 546개소에 대한 관측소 색인 자료를 통합하였다. 최초 설치 시점부터 2023년 7월까지 기상청과 한국지질자원연구원 및 한국원자력안전기술원에서 운영한 지진관측소의 위치와 장비에 대한 설치 및 변경 이력과 계기 응답 정보를 수집하였다. 지진관측소 색인 자료를 현재 지진 시계열 자료 처리와 분석에 가장 널리 사용되고 있는 소프트웨어 체계인 ObsPy의 Extensible Markup Language (XML) 형식과 Seismic Analysis Code의 pole-zero (SACPZ) 파일 형식으로 통합하였다. 지진관측 정보의 투명성을 견인하고, 정보 취합 과정에서의 오류를 수정하며, 향후 추가 또는 변경되는 지진관측소 정보를 반영할 수 있도록 색인 통합 자료를 게시하였다.<br>
 						
@@ -92,7 +92,7 @@
 
 						위 색인 자료는 다음과 같은 GitHub 페이지를 통해서도 확인할 수 있으며, 사용자는 이 페이지를 통하여 수정과 갱신을 위한 의견과 정보를 저희에게 제공할 수 있습니다.<br>
 
-						- <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">A GitHub page for the latest updates and feedback from you<br><br>
+						- <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">A GitHub page</a> for the latest updates and feedback from you<br><br>
 						    
 						[Reference] - Please cite the article below if you feel this would be useful! It is currently accepted for publication in Journal of the Geological Society of Korea. You will be able to check out the paper online during March.
 						<li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press).</li>
