--- a/SeismicNetwork.html
+++ b/SeismicNetwork.html
@@ -90,7 +90,7 @@
 						- <a href="KS_KG_metadata_v1.0.0.SACPZ.zip" target="_blank">Station metadata in SACPZ format</a> for the Seismic Analysis Code (SAC) environment (file size: 6.8 MB)<br>
 						- <a href="KS_KG_metadata_v1.0.0.xml.zip" target="_blank">Station metadata in XML format</a> for the ObsPy platform (file size: 147.7 MB)<br><br>
 
-						위 색인 자료는 다음과 같은 GitHub 페이지를 통해서도 확인할 수 있으며, 사용자는 이 페이지를 통하여 수정과 갱신을 위한 의견과 정보를 저희에게 제공할 수 있습니다.<br>
+						위 색인 자료는 다음 <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">GitHub</a> 페이지를 통해서도 확인할 수 있으며, 사용자는 이 페이지를 통하여 수정과 갱신을 위한 의견과 정보를 저희에게 제공할 수 있습니다.<br>
 
 						- <a href="https://github.com/ByeongSeokAhn/StationMetadata" target="_blank">A GitHub page</a> for the latest updates and feedback from you<br><br>
 						    
