--- a/Article.html
+++ b/Article.html
@@ -82,7 +82,7 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
-                                            <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). (in Korean with English abstract) (in press)  
+                                            <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract) (in press)  
                                             </li>
                                         </ul>
                                         <ul class="link-list last-child">
