--- a/Article.html
+++ b/Article.html
@@ -82,6 +82,10 @@
 											<h3>that <span style="color: #004d65;">geophysics@pknu</span> contributes to</h3>
 										</header>
                                         <ul class="link-list last-child">
+                                            <li class="publication">Heo, D., Kang, T.-S., Kim, M., Ahn, B.S., Lim, H., Han, J., Kim, K.-H., Rhie, J., Kim, Y., Lee, J.-H. (2024). New insights on seismic activity in the southeastern Korean Peninsula from the Gyeongju Hi-density Broadband Seismic Network (GHBSN). Geosciences Journal. (Accepted)
+                                            </li>
+                                        </ul>
+                                        <ul class="link-list last-child">
                                             <li class="publication">Ahn, B.S., Kang, T.-S., Jung, J.O. (2024). Station metadata integration of regional seismic networks in the southern Korean Peninsula. <i>Journal of the Geological Society of Korea</i>, <b>60</b>(1). <a href="http://dx.doi.org/doi:10.14770/jgsk.2024.001" target="_blank">doi:10.14770/jgsk.2024.001</a> (in Korean with English abstract) (in press)  
                                             </li>
                                         </ul>
